cmake_minimum_required(VERSION 3.0.2)
project(toluasharp)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall")

INCLUDE_DIRECTORIES(cjson)

IF(MACOSX)
    INCLUDE_DIRECTORIES(luasocket)
ENDIF(MACOSX)

FILE(GLOB_RECURSE SRC_LIST "*.cpp" "*.cc")

LIST(APPEND SRC_LIST 
    ${PROJECT_SOURCE_DIR}/int64.c 
    ${PROJECT_SOURCE_DIR}/lpeg.c 
    ${PROJECT_SOURCE_DIR}/pb.c 
    ${PROJECT_SOURCE_DIR}/struct.c 
    ${PROJECT_SOURCE_DIR}/tolua.c 
    ${PROJECT_SOURCE_DIR}/uint64.c 
    )

IF(MACOSX)
    ADD_LIBRARY(toluasharp MODULE ${SRC_LIST})
ENDIF(MACOSX)

IF(IOS)

ENDIF(IOS)

IF(ANDROID)

ENDIF(ANROID)

IF(LINUX)

ENDIF(LINUX)
